--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,9 +12,10 @@
 name: "CodeQL Advanced"
 
 on:
-  schedule:
-    - cron: '35 18 * * 6'
-
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
